# sokol

./: meson.build  meson_options.txt
impl/: sokol_app.m  sokol_gfx.m
