option('target', type : 'combo',
    choices : ['glcore33', 'd3d11', 'gles2', 'gles3', 'metal', 'wgpu'],
    value : 'glcore33', description: '3D API to target'
)
option('gfx', type : 'boolean', value : true,  description : 'Install sokol gfx library')
option('app', type : 'boolean', value : false, description : 'Install sokol app library')
